--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "noImplicitReturns": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "declaration": true
   }
 }
 
