--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "mocha --require dist/spec/SpecHelper.js dist/spec/**/*.spec.js",
+    "test:watch": "mocha -w --require dist/spec/SpecHelper.js dist/spec/**/*.spec.js",
     "build:clean": "rm -rf ./dist && mkdir -p dist/lib",
     "build:copy": "cp package.json ./dist/lib/ && cp README.md ./dist/lib/",
     "build:compile": "tsc",
@@ -17,22 +18,25 @@
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.10"
   },
   "devDependencies": {
-    "@types/sinon": "^4.3.1",
-    "sinon": "^4.5.0",
-    "lodash": "^4.17.5",
-    "@types/chai": "^4.1.2",
+    "@types/chai": "^4.1.3",
     "@types/chai-as-promised": "^7.1.0",
-    "@types/lodash": "^4.14.106",
-    "@types/mocha": "^5.0.0",
+    "@types/lodash": "^4.14.108",
+    "@types/mocha": "^5.2.0",
     "@types/node": "^9.6.5",
+    "@types/sinon": "^4.3.3",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^5.1.0",
-    "source-map-support": "^0.5.4",
-    "typescript": "^2.8.1",
-    "leakage": "^0.3.0"
+    "leakage": "^0.3.0",
+    "lodash": "^4.17.10",
+    "mocha": "^5.1.1",
+    "sinon": "^5.0.7",
+    "source-map-support": "^0.5.6",
+    "typescript": "^2.8.3"
+  },
+  "dependencies": {
+    "ts-node": "^6.0.3"
   }
 }
