--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/continuation-local-storage": "^3.2.1",
     "@types/lodash": "^4.14.118",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^9.6.36",
+    "@types/node": "^10.12.12",
     "@types/sinon": "^4.3.3",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -36,6 +37,10 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "@types/cls-hooked": "^4.2.1",
+    "async-listener": "^0.6.10",
+    "cls-hooked": "^4.2.2",
+    "continuation-local-storage": "^3.2.1",
     "ts-node": "^6.2.0"
   }
 }
