--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,28 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "noImplicitAny": false,
-    "removeComments": true,
-    "noLib": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es6",
+    "rootDir": "./",
+    "outDir": "./dist",
     "sourceMap": true,
+    "target": "es5",
     "lib": [
-      "es6"
-    ]
-  },
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-  ]
+      "dom",
+      "esnext"
+    ],
+    "types": [
+      "mocha",
+      "chai",
+      "chai-as-promised",
+      "node"
+    ],
+    "jsx": "react",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "noImplicitReturns": true,
+    "strictNullChecks": true,
+    "declaration": true,
+    "keyofStringsOnly": true
+  }
 }
+
