Update deps, fix compile time errors, all specs green

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "noImplicitReturns": true,
     "strictNullChecks": true,
     "declaration": true,
-    "keyofStringsOnly": true
+    "keyofStringsOnly": false
   }
 }
 
