--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "async-listener": "^0.6.10",
     "cls-hooked": "^4.2.2",
     "continuation-local-storage": "^3.2.1",
+    "prettier": "^2.0.5",
     "ts-node": "^8.9.0"
   }
 }
