--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "cls-hooked": "^4.2.2",
     "continuation-local-storage": "^3.2.1",
     "prettier": "^2.0.5",
-    "ts-node": "^8.9.0"
+    "ts-expect": "^1.1.0",
+    "ts-node": "^8.9.0",
+    "tslint": "^6.1.1"
   }
 }
