--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "name": "hardwired",
   "version": "0.0.1",
   "description": "Minimalistic type-safe dependencies container",
-  "main": "dist/lib/index.js",
-  "types": "dist/lib/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "start": "yarn build:watch",
     "test": "mocha --require dist/spec/SpecHelper.js dist/spec/**/*.spec.js",
     "test:watch": "mocha -w --require dist/spec/SpecHelper.js dist/spec/**/*.spec.js",
-    "build:clean": "rm -rf ./dist && mkdir -p dist/lib",
-    "build:copy": "cp package.json ./dist/lib/ && cp README.md ./dist/lib/",
+    "build:clean": "rimraf ./lib",
+    "build:copy": "mkdir -p ./lib && cp package.json ./lib && cp README.md ./lib/",
     "build:compile": "tsc",
-    "build:dist": "npm run build:clean && npm run build:copy && npm run build:compile",
-    "build:watch": "npm run build:clean && npm run build:copy && tsc --watch --sourceMap --pretty",
-    "build:link": "npm run build:copy && cd ./dist/lib && yarn link && yarn install --production",
+    "build:dist": "yarn run build:clean && yarn run build:copy && yarn run build:compile",
+    "build:watch": "yarn run build:clean && yarn run build:copy && tsc --watch --sourceMap --pretty",
+    "build:link": "yarn run build:copy && cd ./dist/lib && yarn link && yarn install --production",
     "build:coverage": "nyc --reporter=text-lcov mocha -- -- spec dist/spec/**/*.spec.js | coveralls",
     "build:coverage:local": "nyc mocha -- -- spec dist/spec/**/*.spec.js"
   },
@@ -44,6 +44,7 @@
     "cls-hooked": "^4.2.2",
     "continuation-local-storage": "^3.2.1",
     "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
     "ts-expect": "^1.1.0",
     "ts-node": "^8.9.0",
     "tslint": "^6.1.1"
