--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "rootDir": "./",
-    "outDir": "./dist",
+    "rootDir": "./src",
+    "outDir": "./lib",
     "sourceMap": true,
     "target": "es5",
     "lib": [
