--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,9 @@
 {
   "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./lib",
+    "composite": true,
+    "declarationMap": true,
     "sourceMap": true,
     "target": "es5",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
-    "types": [
-      "mocha",
-      "chai",
-      "chai-as-promised",
-      "node"
-    ],
     "jsx": "react",
     "module": "commonjs",
     "moduleResolution": "node",
@@ -22,7 +12,10 @@
     "noImplicitReturns": true,
     "strictNullChecks": true,
     "declaration": true,
+    "alwaysStrict": true,
+    "strict": true,
+    "strictFunctionTypes": false,
+    "noImplicitAny": false,
     "keyofStringsOnly": false
   }
 }
-
