Add drafts for redux integration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "strict": true,
     "strictFunctionTypes": false,
     "noImplicitAny": false,
-    "keyofStringsOnly": false
+    "keyofStringsOnly": false,
+    "downlevelIteration": true
   }
 }
