--- a/packages/redux-di/package.json
+++ b/packages/redux-di/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hardwired/react-di",
+  "name": "@hardwired/redux-di",
   "private": true,
   "version": "1.0.0",
   "main": "./lib/index.js",
@@ -7,12 +7,16 @@
   "dependencies": {
     "@hardwired/di": "*"
   },
+  "peerDependencies": {
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
+  },
   "devDependencies": {
     "@testing-library/react": "^10.0.4",
     "@types/react": "^16.9.34",
     "jest": "^25.4.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "files": [
     "lib",
