Add draft jest configuration using transpiled code

--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.2",
+    "babel-jest": "^26.0.1",
     "concurrently": "^5.2.0",
     "nyc": "^15.0.1",
     "prettier": "^2.0.5",
