--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "^25.2.2",
     "@types/node": "^13.13.2",
     "concurrently": "^5.2.0",
+    "jest": "^26.0.1",
     "nyc": "^15.0.1",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
