--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "alwaysStrict": true,
     "strict": true,
     "strictFunctionTypes": false,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "keyofStringsOnly": false,
     "downlevelIteration": true
   }
