Working on responsibilities split [WIP]

--- a/packages/s-middleware/tsconfig.json
+++ b/packages/s-middleware/tsconfig.json
@@ -5,7 +5,14 @@
     "rootDir": "./src",
     "composite": true
   },
-  "references": [],
+  "references": [
+    {
+      "path": "../routing-core/tsconfig.json"
+    },
+    {
+      "path": "../routing-contract/tsconfig.json"
+    }
+  ],
   "include": [
     "./src"
   ],
