--- a/packages/s-app/package.json
+++ b/packages/s-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@roro/s-middleware",
+  "name": "@roro/s-app",
   "version": "0.0.1",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -8,7 +8,7 @@
     "src"
   ],
   "dependencies": {
-    "@roro/routing-contract": "*"
+    "@roro/s-middleware": "*"
   },
   "publishConfig": {
     "access": "public"
