--- a/packages/di-core/tsconfig.json
+++ b/packages/di-core/tsconfig.json
@@ -5,11 +5,7 @@
     "rootDir": "./src",
     "composite": true
   },
-  "references": [
-    {
-      "path": "../di-core/tsconfig.json"
-    }
-  ],
+  "references": [],
   "include": [
     "./src"
   ],
