--- a/packages/react-di/package.json
+++ b/packages/react-di/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
-    "@hardwired/di": "*"
+    "@hardwired/di-core": "*"
   },
   "devDependencies": {
     "@testing-library/react": "^10.0.4",
