--- a/packages/redux-di/tsconfig.json
+++ b/packages/redux-di/tsconfig.json
@@ -7,7 +7,7 @@
   },
   "references": [
     {
-      "path": "../di/tsconfig.json"
+      "path": "../di-core/tsconfig.json"
     }
   ],
   "include": [
