--- a/packages/redux-di/tsconfig.json
+++ b/packages/redux-di/tsconfig.json
@@ -8,6 +8,9 @@
   "references": [
     {
       "path": "../di-core/tsconfig.json"
+    },
+    {
+      "path": "../di/tsconfig.json"
     }
   ],
   "include": [
