--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "ts-jest": "^26.0.0",
     "ts-node": "^8.10.1",
     "tslint": "^6.1.2",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.1-rc"
   },
   "dependencies": {
     "ramda": "^0.27.0",
