--- a/packages/react-di/tsconfig.json
+++ b/packages/react-di/tsconfig.json
@@ -10,7 +10,7 @@
       "path": "../di-core/tsconfig.json"
     },
     {
-      "path": "../di/tsconfig.json"
+      "path": "../di-next/tsconfig.json"
     }
   ],
   "include": [
