--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
     "composite": true,
+    "lib": [
+      "ES2019.Array",
+      "DOM"
+    ],
     "declarationMap": true,
     "sourceMap": true,
     "target": "es5",
