--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -22,14 +22,19 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
+    - name: Yarn install
+      run: yarn install
+      
+    - name: Yarn build
+      run: yarn build
+      
+    - name: Yarn test
+      run: yarn test
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: yarn build
       run: |
-        echo Add other actions to build,
+        yarn install
         echo test, and deploy your project.
         
     - name: Setup Node.js environment
