--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "start": "tsc -b packages/tsconfig.json --watch --pretty",
+    "build": "tsc -b packages/tsconfig.json --pretty",
     "test": "yarn run jest --config jest.config.js",
     "test:watch": "yarn run jest --config jest.config.js --watch",
     "postinstall": "yarn run update:tsconfig.json && yarn run update:package.json",
