--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,16 +1,26 @@
 {
-  "name": "@hardwired/core",
+  "name": "hardwired",
+  "description": "Minimalistic, type-safe dependency injection solution for TypeScript",
+  "keywords": [
+    "ioc",
+    "dependency injection",
+    "container"
+  ],
   "version": "0.0.1",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
-  "dependencies": {},
-  "devDependencies": {},
   "files": [
     "lib",
-    "src"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public"
+  },
+  "author": "Tomasz Robaczewski <robak86@gmail.com>",
+  "homepage": "https://github.com/robak86/hardwired",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:robak86/hardwired.git"
   },
   "scripts": {
     "build": "tsc -b ./tsconfig.json",
