--- a/packages/react-di/package.json
+++ b/packages/react-di/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@hardwired/react-di",
+  "name": "hardwired-react",
   "version": "0.0.1",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
-    "@hardwired/core": "*"
+    "hardwired": "*"
   },
   "devDependencies": {
     "@testing-library/react": "^10.0.4",
@@ -14,10 +14,16 @@
   },
   "files": [
     "lib",
-    "src"
+    "README.md"
   ],
   "publishConfig": {
     "access": "public"
+  },
+  "author": "Tomasz Robaczewski <robak86@gmail.com>",
+  "homepage": "https://github.com/robak86/hardwired",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:robak86/hardwired.git"
   },
   "scripts": {
     "build": "tsc -b ./tsconfig.json",
