Remove stale TODO items

--- a/packages/react-di/package.json
+++ b/packages/react-di/package.json
@@ -26,7 +26,6 @@
     "url": "git@github.com:robak86/hardwired.git"
   },
   "scripts": {
-    "build": "tsc -b ./tsconfig.json",
-    "test": "yarn test"
+    "build": "tsc -b ./tsconfig.json"
   }
 }
