--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,7 +27,6 @@
     "url": "git@github.com:robak86/hardwired.git"
   },
   "scripts": {
-    "build": "tsc -b ./tsconfig.json",
-    "test": "yarn test"
+    "build": "tsc -b ./tsconfig.json"
   }
 }
