--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,7 @@
     "container",
     "type-safe"
   ],
-  "version": "0.0.2",
+  "version": "0.0.3",
   "dependencies": {
     "tiny-invariant": "^1.1.0"
   },
@@ -27,7 +27,6 @@
     "url": "git@github.com:robak86/hardwired.git"
   },
   "scripts": {
-    "build": "tsc -b ./tsconfig.json",
-    "test": "yarn test"
+    "build": "tsc -b ./tsconfig.json"
   }
 }
