--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "ts-jest": "^26.0.0",
     "ts-node": "^8.10.1",
     "tslint": "^6.1.2",
-    "typescript": "^4.0.1-rc"
+    "typescript": "^4.0.2"
   },
   "dependencies": {
     "tiny-invariant": "^1.1.0",
