--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
   },
   "devDependencies": {
     "@types/benchmark": "^1.0.33",
-    "@types/jest": "^26.0.13",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.10.1",
     "benny": "^3.6.14",
     "concurrently": "^5.2.0",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.0.1",
+    "jest": "^26.6.3",
     "nyc": "^15.0.1",
     "prettier": "^2.0.5",
     "pretty-quick": "^3.0.0",
@@ -44,7 +44,7 @@
     "ts-jest": "^26.0.0",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.2",
-    "typescript": "^4.1.0-beta"
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "tiny-invariant": "^1.1.0",
