--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,47 +1,28 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v1.4.3
-      with:
-        # Set always-auth in npmrc
-        #always-auth: # optional, default is false
-        # Version Spec of the version to use.  Examples: 10.x, 10.15.1, >=10.15.0
-        node-version: 14.x
-        # Optional registry to set up for auth. Will set the registry in a project level .npmrc and .yarnrc file, and set up auth to read in from env.NODE_AUTH_TOKEN
-        #registry-url: # optional
-        # Optional scope for authenticating against scoped registries
-        #scope: # optional
-        # Deprecated. Use node-version instead. Will not be supported after October 1, 2019
-        #version: # optional
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2-beta
+        with:
+          node-version: 14.x
 
-    - name: Yarn install
-      run: yarn install
+      - name: Yarn install
+        run: yarn install
 
-    - name: Yarn build
-      run: yarn build
+      - name: Yarn build
+        run: yarn build
 
-    - name: Yarn test
-      run: yarn test
-
+      - name: Yarn test
+        run: yarn test
