--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "purge": "rimraf packages/**/lib/* packages/**/*.tsbuildinfo",
     "build:coverage": "nyc --reporter=text-lcov mocha -- -- spec packages/**/__test__/*.test.js | coveralls",
     "build:coverage:local": "nyc mocha -- -- spec packages/**/__test__/*.test.js",
-    "format": "cross-env prettier --write 'packages/**/*.{ts,tsx,js}'",
-    "format-staged": "pretty-quick --staged"
+    "format": "cross-env prettier --write 'packages/**/*.{ts,tsx,js}'"
   },
   "author": "Tomasz Robaczewski",
   "license": "ISC",
@@ -23,8 +22,14 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "yarn format-staged && lint-staged"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "packages/**/*.{ts,tsx,js}": [
+      "eslint",
+      "prettier --write"
+    ]
   },
   "devDependencies": {
     "@types/benchmark": "^1.0.33",
@@ -35,9 +40,9 @@
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "lint-staged": "^10.5.2",
     "nyc": "^15.0.1",
     "prettier": "^2.0.5",
-    "pretty-quick": "^3.0.0",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.19",
     "ts-expect": "^1.1.0",
