--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "purge": "rimraf packages/**/lib/* packages/**/*.tsbuildinfo",
     "build:coverage": "nyc --reporter=text-lcov mocha -- -- spec packages/**/__test__/*.test.js | coveralls",
     "build:coverage:local": "nyc mocha -- -- spec packages/**/__test__/*.test.js",
-    "format": "cross-env prettier --write 'packages/**/*.{ts,tsx,js}'"
+    "format": "cross-env prettier --write 'packages/**/*.{ts,tsx,js}'",
+    "lint": "eslint 'packages/**/*.{!d.ts,ts,tsx}'"
   },
   "author": "Tomasz Robaczewski",
   "license": "ISC",
@@ -26,17 +27,23 @@
     }
   },
   "lint-staged": {
-    "packages/**/*.{ts,tsx,js}": [
-      "eslint",
-      "prettier --write"
+    "packages/**/*.{ts,tsx}": [
+      "prettier --write",
+      "yarn lint"
     ]
   },
   "devDependencies": {
     "@types/benchmark": "^1.0.33",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
     "benny": "^3.6.14",
     "concurrently": "^5.2.0",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
@@ -48,7 +55,6 @@
     "ts-expect": "^1.1.0",
     "ts-jest": "^26.0.0",
     "ts-node": "^9.0.0",
-    "tslint": "^6.1.2",
     "typescript": "^4.1.2"
   },
   "dependencies": {
