--- a/packages/example/tsconfig.json
+++ b/packages/example/tsconfig.json
@@ -13,10 +13,10 @@
       "path": "../core/tsconfig.json"
     },
     {
-      "path": "../react-di/tsconfig.json"
+      "path": "../react/tsconfig.json"
     },
     {
-      "path": "../redux-di/tsconfig.json"
+      "path": "../redux/tsconfig.json"
     }
   ],
   "include": [
