--- a/packages/redux/package.json
+++ b/packages/redux/package.json
@@ -12,7 +12,9 @@
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "react-redux": "^7.2.2",
+    "@types/react-redux": "^7.1.14"
   },
   "files": [
     "lib",
