--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,15 +14,16 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2
         with:
           node-version: 14.x
 
-      - name: Yarn install
-        run: yarn install
+      - run: yarn install
+      - run: yarn build
 
-      - name: Yarn build
-        run: yarn build
-
-      - name: Yarn test
-        run: yarn test
+      - name: Publish core
+        uses: JS-DevTools/npm-publish@v1
+        if: github.ref == 'refs/heads/master'
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: packages/core/package.json
