--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hardwired/core": "*",
-    "@hardwired/react": "*",
-    "@hardwired/redux": "*",
+    "hardwired": "*",
+    "hardwired-react": "*",
+    "hardwired-redux": "*",
     "@types/node": "^12.0.0",
     "@types/styled-components": "^5.1.5",
     "parcel-bundler": "^1.12.4",
