--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@hardwired/react",
+  "name": "hardwired-react",
   "version": "0.0.1",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "dependencies": {
-    "@hardwired/core": "*"
+    "hardwired": "*"
   },
   "devDependencies": {},
   "files": [
