--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   ],
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn build && yarn test"
     }
   },
   "lint-staged": {
