--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "ts-expect": "^1.1.0",
     "ts-jest": "^26.0.0",
     "ts-node": "^9.0.0",
-    "typescript": "^4.1.2",
+    "typescript": "4.1.3",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
