--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,6 +2,7 @@
   "name": "hardwired",
   "description": "Minimalistic, type-safe dependency injection solution for TypeScript",
   "author": "Tomasz Robaczewski <robak86@gmail.com>",
+  "license": "MIT",
   "homepage": "https://github.com/robak86/hardwired",
   "keywords": [
     "ioc",
@@ -9,7 +10,7 @@
     "container",
     "type-safe"
   ],
-  "version": "0.1.3",
+  "version": "0.1.4",
   "dependencies": {
     "tiny-invariant": "^1.1.0"
   },
