--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "files": [],
   "include": [],
-  "composite": true,
   "references": [
     {
       "path": "./core/tsconfig.json"
@@ -10,10 +9,10 @@
       "path": "./react/tsconfig.json"
     },
     {
-      "path": "./redux/tsconfig.json"
+      "path": "./example/tsconfig.json"
     },
     {
-      "path": "./example/tsconfig.json"
+      "path": "./state-poc/tsconfig.json"
     }
   ]
 }
