--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "hardwired": "*",
     "hardwired-react": "*",
-    "hardwired-redux": "*",
     "@types/node": "^12.0.0",
     "@types/styled-components": "^5.1.5",
     "parcel-bundler": "^1.12.4",
@@ -41,6 +40,6 @@
     "imitation": "^3.0.0"
   },
   "scripts": {
-    "start": "parcel public/index.html"
+    "start": "parcel index.html"
   }
 }
