--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "tsc -b packages/tsconfig.json --watch --pretty",
-    "build": "tsc -b packages/tsconfig.json --pretty",
+    "build": "tsc -b packages/tsconfig.json --pretty && rimraf packages/**/lib/*/__test__ ",
     "test": "yarn run jest --config jest.config.js",
     "postinstall": "yarn run update:tsconfig.json && yarn run update:package.json",
     "update:tsconfig.json": "ts-node scripts/update-package-tsconfig.ts",
