--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "tiny-invariant": "^1.1.0"
   },
+  "devDependencies": {
+    "performance-now": "^2.1.0"
+  },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "files": [
