Add drafts for backend server library

--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -9,6 +9,9 @@
       "path": "./react/tsconfig.json"
     },
     {
+      "path": "./backend/tsconfig.json"
+    },
+    {
       "path": "./example/tsconfig.json"
     }
   ]
