--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,13 +10,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [ 10.x, 12.x, 14.x, 15.x ]
+
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Node.js environment
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: ${{ matrix.node-version }}
 
       - run: yarn install
       - run: yarn build
