--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,17 +10,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [ 12.x, 14.x, 15.x ]
+
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup Node.js environment
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: ${{ matrix.node-version }}
 
       - run: yarn install
       - run: yarn build
-      - run: yarn test --selectProjects core --coverage
+      - run: yarn test --coverage
 
       - name: Copy core documentation
         run: cp ./README.md ./packages/core/README.md
