--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -26,18 +26,36 @@ jobs:
       - run: yarn build
       - run: yarn test --coverage
 
-      - name: Copy core documentation
-        run: cp ./README.md ./packages/core/README.md
-
       - uses: codecov/codecov-action@v1
         with:
           files: ./coverage/clover.xml
           fail_ci_if_error: true
           verbose: true
 
+  publish:
+    runs-on: ubuntu-latest
+
+    needs:
+      - build
+
+    if: github.ref == 'refs/heads/master'
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+
+      - run: yarn install
+      - run: yarn build
+
+      - name: Copy core documentation
+        run: cp ./README.md ./packages/core/README.md
+
       - name: Publish core
         uses: JS-DevTools/npm-publish@v1
-        if: github.ref == 'refs/heads/master'
         with:
           token: ${{ secrets.NPM_TOKEN }}
           package: packages/core/package.json
