--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "@types/react-dom": "^17.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "@airbnb/node-memwatch": "^2.0.0"
   },
   "dependencies": {
     "memoize-one": "^5.1.1",
