--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [ 12.x, 14.x, 15.x ]
+        node-version: [ 12.x, 14.x, 16.x ]
 
     steps:
       - uses: actions/checkout@v2
@@ -46,7 +46,7 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: 14.x
+          node-version: 16.x
 
       - run: yarn install
       - run: yarn build
@@ -59,3 +59,9 @@ jobs:
         with:
           token: ${{ secrets.NPM_TOKEN }}
           package: packages/core/package.json
+
+      - name: Publish react integration
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: packages/react/package.json
