Publish poc of react integration (#39)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "tsc -b packages/tsconfig.json --watch --pretty",
-    "build": "tsc -b packages/tsconfig.json --pretty && rimraf packages/**/lib/*/__test__ ",
+    "build": "tsc -b packages/tsconfig.json --pretty",
+    "prepublishOnly": "rimraf packages/**/lib/*/__test__",
     "test": "yarn run jest --config jest.config.js",
     "postinstall": "yarn run update:tsconfig.json && yarn run update:package.json",
     "update:tsconfig.json": "ts-node scripts/update-package-tsconfig.ts",
@@ -32,35 +33,36 @@
     ]
   },
   "devDependencies": {
-    "@types/benchmark": "^1.0.33",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.10.1",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "eslint": "^7.15.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "eslint-plugin-react": "^7.21.5",
+    "@types/benchmark": "^2.1.0",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.4",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.2",
-    "prettier": "^2.2.1",
+    "jest": "^27.0.4",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.1",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.19",
     "ts-expect": "^1.1.0",
-    "ts-jest": "^26.0.0",
-    "ts-node": "^9.0.0",
-    "typescript": "4.2.3",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
-    "@testing-library/react-hooks": "^5.0.3",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "redux": "^4.0.5"
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
+    "typescript": "4.3.4",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
+    "@testing-library/react-hooks": "^7.0.0",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "redux": "^4.0.5",
+    "@airbnb/node-memwatch": "^2.0.0"
   },
   "dependencies": {
     "memoize-one": "^5.1.1",
