--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -4,11 +4,11 @@
   "license": "MIT",
   "homepage": "https://github.com/robak86/hardwired",
   "description": "Hardwired integration for React",
-  "version": "0.0.1",
+  "version": "0.4.4",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "peerDependencies": {
-    "hardwired": "*"
+    "hardwired": "0.4.4"
   },
   "devDependencies": {
     "hardwired": "*"
